--- a/NJLive/web/challenge/content.xhtml
+++ b/NJLive/web/challenge/content.xhtml
@@ -19,26 +19,26 @@
                                      tableStyleClass="table table-striped table-hover"
                                      value="#{roomContentBean.listProblems}"
                                      var="p"
-                                     styleClass="center-block"
+                                     styleClass="center-block bordersolid"
                                      rowKey="#{p.idProblem}"
                                      rowIndexVar="indexKey"
                                      paginator="false"
                                      paginatorPosition="bottom"                                     
                                      emptyMessage="#{msg['general.table.noinfo']}">
-                            <p:column headerText="#" width="5%" styleClass="text-center">
+                            <p:column headerText="Id" width="4" styleClass="text-center">
                                 <h:outputText value="#{roomContentBean.mapLettersGlobs[p.idProblem]}" escape="false"/>
                             </p:column>
-                            <p:column width="4%" styleClass="text-center" >
-                                <img src="#{roomContentBean.mapColorsGlogs[p.idProblem]}" class="globe" />
+                            <p:column  headerText="" width="4" styleClass="text-center" >
+                                <img src="#{roomContentBean.mapColorsGlogs[p.idProblem]}" class="globe-center"  />
                             </p:column>
-                            <p:column headerText="Problema" width="30%" styleClass="text-left" >
+                            <p:column headerText="Problema" width="40" styleClass="text-left" >
                                 <h:outputLink 
                                     target="_blank"
                                     value="#{roomContentBean.getRealPathOfPDF(p.idProblem)}">
                                     #{p.nameProblem}
                                 </h:outputLink> 
                             </p:column>
-                            <p:column headerText="Categoria" width="30%" styleClass="text-left" >
+                            <p:column headerText="Categoria" width="45" styleClass="text-left" >
                                 <ui:repeat var="c" value="#{p.listCategoryMessage.list}" varStatus="unitcategory" >
                                     <h:outputText styleClass="label #{c.idCategory eq 1? 'label-success':
                                                                       c.idCategory eq 2? 'label-info':
@@ -46,17 +46,20 @@
                                                                       c.idCategory eq 4? 'label-danger':
                                                                       c.idCategory eq 5? 'label-primary':
                                                                       c.idCategory eq 6? 'label-warning':
-                                                                      'label-info'}" value="#{c.nameCategory} " /> 
+                                                                      'label-info'}" value="#{c.nameCategory} " style="font-size: 14px; font-weight: bold;" /> 
                                 </ui:repeat>
                             </p:column>
-                            <p:column headerText="Complejidad" width="12%" styleClass="text-center" >
+                            <p:column headerText="Complejidad" width="8" styleClass="text-center" >
                                 <h:outputText value="#{p.bestComplexity} " /> 
                             </p:column>
-                            <p:column headerText="Tiempo Max." width="9%" styleClass="text-center" >
-                                <h:outputText value="#{p.timeLimit} " /> 
+                            <p:column headerText="Tiempo Max." width="5" styleClass="text-center" >
+                                <h:outputText value="#{p.timeLimit} Seg" /> 
                             </p:column>
-                            <p:column headerText="Memoria Max." width="9%" styleClass="text-center" >
-                                <h:outputText value="#{p.memoLimit}" /> 
+                            <p:column headerText="Memoria Max." width="5" styleClass="text-center" >
+                                <h:outputText value="#{p.memoLimit} KB" /> 
+                            </p:column>
+                            <p:column headerText="Descripcion." width="60" styleClass="text-center" >
+                                <h:outputText value="#{p.description}" /> 
                             </p:column>
                         </p:dataTable>
                     </h:form>
