--- a/NJWeb/web/modules/content/problem/search.xhtml
+++ b/NJWeb/web/modules/content/problem/search.xhtml
@@ -99,7 +99,7 @@
                                 <h:outputText value="#{p.statusTL}" />
                             </p:column>
                             <p:column headerText="Total" width="30" style="text-align: center !important;">
-                                <h:outputText value="#{p.totalStatus}" />
+                                <h:outputText value="#{p.statusTotal}" />
                             </p:column>
                         </p:dataTable>
                     </h:form>
