--- a/NJWeb/web/commons/header.xhtml
+++ b/NJWeb/web/commons/header.xhtml
@@ -1,25 +1,25 @@
-<ui:composition 
+<ui:composition
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets">
     <f:facet name="first">
-
         <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="/go/to/css/customized-primefaces.css"/>
         <link rel="stylesheet" href="/go/to/css/customized-theme.css"/>
         <link rel="stylesheet" href="/go/to/css/style.css"/>
-        <link rel="stylesheet" href="/go/to/tools/frameworks/bootstrap/css/bootstrap.min.css"/>
         
+        <link rel="stylesheet" href="/go/to/tools/frameworks/bootstrap/css/bootstrap.min.css"/>
         <script src="/go/to/js/jquery/jquery-2.1.4.js"></script> 
         <script src="/go/to/tools/frameworks/bootstrap/js/bootstrap.min.js"></script>
 
         <!-- Libs CodeMirror -->
+        <!--
         <link rel="stylesheet" href="/go/to/tools/frameworks/codemirror/lib/codemirror.css "/>
         <link rel="stylesheet" href="/go/to/tools/frameworks/codemirror/theme/eclipse.css"/>
-        <script src="/go/to/tools/frameworks/codemirror/lib/codemirror.js"/>
-        
+        <script src="/go/to/tools/frameworks/codemirror/lib/codemirror.js"/> -->
+
         <link rel="icon" type="image/ico" href="/go/to/img/logo-icon.png"/>
         <title> #{msg['header.general.appweb']} </title>
     </f:facet>
