--- a/NJWeb/web/index.xhtml
+++ b/NJWeb/web/index.xhtml
@@ -4,52 +4,74 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui" >
 
     <f:view contentType="text/html">
         <h:head>
-            <ui:include src="commons/header.xhtml"/>
+            <ui:include src="/commons/header.xhtml"/>
         </h:head>
         <h:body id="main-body-index">
             <div class="container">
-                <ui:include src="commons/navigation.xhtml"/>
+                <ui:include src="/commons/navigation.xhtml"/>
+
+
+                <h:form id="form-login" styleClass="form-horizontal">
+                    <p:dialog id="dlg-login"
+                              widgetVar="dlg-login"
+                              modal="true"
+                              resizable="false"
+                              width="400">
+                        <!-- <p:ajax event="close" resetValues="true" update="panel-login"/> -->
+                        <p:panel id="panel-login">
+                            <div class="well">
+                                <fieldset>
+                                    <div class="form-group">
+                                        <label for="username" class="col-lg-4 control-label">#{msg['general.appweb.signin.user.label']}</label>
+                                        <div class="col-lg-8">
+                                            <p:inputText id="username"
+                                                         styleClass="form-control"
+                                                         placeholder="#{msg['general.appweb.signin.user.placeholder']}"
+                                                         required="true"
+                                                         value="#{logInOutBean.username}"
+                                                         validatorMessage="#{msg['validacion.formato.email']}">
+                                                <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
+                                            </p:inputText>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="password" class="col-lg-4 control-label">#{msg['general.appweb.signin.password.label']}</label>
+                                        <div class="col-lg-8">
+                                            <p:password id="password"
+                                                        styleClass="form-control"
+                                                        placeholder="#{msg['general.appweb.signin.password.placeholder']}"
+                                                        required="true"
+                                                        value="#{logInOutBean.password}">
+                                                <f:validateLength minimum="3" maximum="15" />
+                                            </p:password>
+                                        </div>
+                                    </div>
+                                    <div class="form-group text-center">
+                                        <p:commandButton id="btn-login"
+                                                         styleClass="btn btn-default"
+                                                         value="#{msg['general.appweb.signin.btn']}"
+                                                         action="#{logInOutBean.actionLoginUser}"
+                                                         update="@form" />
+                                    </div>
+                                    <p:messages id="msgs" autoUpdate="true" closable="true"/>
+                                </fieldset>
+                            </div>
+                        </p:panel>
+                    </p:dialog>
+                </h:form>
+
+
+
+
                 <div class="jumbotron">
-                    <h1>Nago Judge</h1>
-                    <p>(Never Alone, go at outcome)
-                        Nace de la necesidad de automatizar e incentivar, competencias en la educacion superior. </p>
-                    <a class="btn btn-lg btn-primary" href="#" role="button">¿Eres nuevo?</a>
+                    <h1>NagoJudge</h1>
+                    <p>Juez virtual de programación, nace de la necesidad de automatizar e incentivar, competencias y eventos de programación en la educacion superior.</p>
                 </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2 class="text-center">... Y bueno ¿ que es Nago Judge ?</h2>
-                        <p class="text-justify">
-                            Excelente pregunta. Nago Judge, es una plataforma que promueve habilidades de competencia y refuerza debilidades encontradas
-                            en el proceso.
-                        </p>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="list-group">
-                            <a href="#" class="list-group-item">
-                                <h4 class="list-group-item-heading">Sabias que ...</h4>
-                                <p class="list-group-item-text">¿Sabías que sonrojarse te hace ver como una persona más confiable?</p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2 class="text-center"> ¿Como lo hace ? </h2>
-                        <p class="text-justify">
-                            Existe un algoritmo de medicion, que determina a partir de unos parametros dados las fortalezas halladas en esa competencia. Cada competencia
-                            tiene unos niveles de dificultad.  <em> Matematicas, Programacion, Logica basica, etc </em>
-                        </p>
-                    </div>
-                    <div class="col-lg-6">
-
-                    </div>
-                </div>
-
-                <ui:include src="commons/footer.xhtml"/>
+                <ui:include src="/commons/footer.xhtml"/>
             </div>    
         </h:body>
     </f:view>
